Week 4 completed